--- a/readreview/书评抓取.md
+++ b/readreview/书评抓取.md
@@ -2,7 +2,7 @@
 
 [scrapy爬取豆瓣电影 - 简书](https://www.jianshu.com/p/ecd41f6986cc)
 
-## 01. settings.py
+## 01. 设置问题
 
 ### 1. 有关身份验证
 
@@ -14,36 +14,29 @@
 
 ### 2. 输出的编码格式
 
-    FEED_EXPORT_ENCODING = 'utf-8
+    FEED_EXPORT_ENCODING = 'utf-8'
 
+## 02. xpath 表达式试验抓取内容
 
-
-## xpath 表达式试验抓取内容
-
+```
 response.xpath('//div[@class="main review-item"]')
-
 response.xpath('//div[@class="main-bd"]')
-
 response.xpath('//div[@class="main-bd"]//text()').extract() 
-
 response.xpath('//div[@class="review-short"]
-
 response.xpath('//div[@class="review-short"]//text()').extract()
-
 response.xpath('//div[@class="short-content"]')
-
 response.xpath('//div[@class="short-content"]//text()').extract() 
+```
 
 这是没「展开」的短评。
 
 发现展开这个动作需要 JS 参与，是动态的。开发者工具里把 JS 禁止掉后，页面里点「展开」是没用的。在没有动态抓取的知识之前，发现只有下面的 xpath 表达式有效。
 
-response.xpath('//*[contains(@class,"clearfix")]//text()').extract()
+    response.xpath('//*[contains(@class,"clearfix")]//text()').extract()
 
 但跑到 scrapy 里抓取，发现抓取的结果还是没有「展开」的信息。
 
-
-## 问题汇总
+## 03. 问题汇总
 
 1、验证的问题抓取不了信息。
 
@@ -57,12 +50,11 @@ response.xpath('//*[contains(@class,"clearfix")]//text()').extract()
 
 解决办法：把旧版「review.py」删掉。scrapy 框架里只能有一个爬虫文件，在另存新文件里修稿源码的话，运行还是按旧版的运行的。
 
-
-## 代码
+## 04. 代码
 
 ### 1. 翻页抓单个元素
 
-```
+```py
 # -*- coding: utf-8 -*-
 import scrapy
 from readreview.items import ReadreviewItem
@@ -87,9 +79,9 @@ class ReviewSpider(scrapy.Spider):
 
 ### 2. 成品
 
-#### 01 版本
+### 01 版本
 
-```
+```py
 # -*- coding: utf-8 -*-
 import scrapy
 from readreview.items import ReadreviewItem
@@ -129,7 +121,7 @@ class ReviewSpider(scrapy.Spider):
 
 ```
 
-```
+```py
 # -*- coding:utf-8 -*-
 
 import glob, os
@@ -168,10 +160,9 @@ for infile in glob.glob("/Users/Daglas/Desktop/*.json"):
 
 ```
 
+### 02 版
 
-#### 02 版
-
-```
+```py
 # -*- coding: utf-8 -*-
 import scrapy
 from readreview.items import ReadreviewItem
@@ -210,7 +201,7 @@ class ReviewSpider(scrapy.Spider):
         yield item
 ```
 
-```
+```py
 # -*- coding:utf-8 -*-
 
 import glob, os
@@ -246,8 +237,6 @@ for infile in glob.glob("/Users/Daglas/Desktop/*.json"):
                 line = md.modify_text(line)
                 file_obj.write(line + "\n\n"
 ```
-
-
 
 
 
