抓取了基本信息并新增了 blog 爬虫

--- a/readreview/书评抓取.md
+++ b/readreview/书评抓取.md
@@ -2,6 +2,13 @@
 
 [scrapy爬取豆瓣电影 - 简书](https://www.jianshu.com/p/ecd41f6986cc)
 
+## 00. 新建项目
+
+```
+scrapy startproject blog
+scrapy genspider basic
+```
+
 ## 01. 设置问题
 
 ### 1. 有关身份验证
