blog-vue course

--- a/blog/抓取记录.md
+++ b/blog/抓取记录.md
@@ -1,3 +1,20 @@
+# 抓取记录
+
+## Vue 教程
+
+试验：
+
+```py
+response.xpath('(//p/text()) | (//p/strong/text()) | (//h2/text()) | (//p/a/text()) | (//p/a/code/text())').extract()
+
+response.xpath('(//p/text()) | (//p/strong/text()) | (//h2/text()) | (//p/a/text()) | (//p/a/code/text()) | (//span/text()) | (//h3/text())').extract()
+
+response.xpath('(//p/text()) | (//p/strong/text()) | (//h2/text()) | (//p/a/text()) | (//p/a/code/text()) | (//h3/text())').extract()
+```
+
+代码：
+
+```py
 # -*- coding: utf-8 -*-
 import scrapy
 import re
@@ -30,3 +47,9 @@ class BasicSpider(scrapy.Spider):
             f.write(allcontent)
 
         yield item
+```
+
+
+
+
+
