--- a/readreview/书评抓取.md
+++ b/readreview/书评抓取.md
@@ -2,6 +2,12 @@
 
 [scrapy爬取豆瓣电影 - 简书](https://www.jianshu.com/p/ecd41f6986cc)
 
+跑爬虫的命令：
+
+```
+scrapy crawl review -o data.json
+```
+
 ## 00. 新建项目
 
 ```
@@ -15,13 +21,17 @@ scrapy genspider basic web
 
 正常抓取是失败的，必须要在 settings.py 里添加自己的客户端信息。
 
-    USER_AGENT = 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.100 Safari/537.36'
+```
+USER_AGENT = 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.100 Safari/537.36'
+```
 
 然后抓取验证下：scrapy shell 'https://book.douban.com/subject/26708119/reviews'
 
 ### 2. 输出的编码格式
 
-    FEED_EXPORT_ENCODING = 'utf-8'
+```
+FEED_EXPORT_ENCODING = 'utf-8'
+```
 
 ## 02. xpath 表达式试验抓取内容
 
@@ -39,7 +49,9 @@ response.xpath('//div[@class="short-content"]//text()').extract()
 
 发现展开这个动作需要 JS 参与，是动态的。开发者工具里把 JS 禁止掉后，页面里点「展开」是没用的。在没有动态抓取的知识之前，发现只有下面的 xpath 表达式有效。
 
-    response.xpath('//*[contains(@class,"clearfix")]//text()').extract()
+```
+response.xpath('//*[contains(@class,"clearfix")]//text()').extract()
+```
 
 但跑到 scrapy 里抓取，发现抓取的结果还是没有「展开」的信息。
 
@@ -244,6 +256,3 @@ for infile in glob.glob("/Users/Daglas/Desktop/*.json"):
                 line = md.modify_text(line)
                 file_obj.write(line + "\n\n"
 ```
-
-
-
